This file describes changes in the AutoDoc package.

2019.02.22
  - Updated changes file

2019.02.21
  - Removed possibility to mark function arguments via curly braces, as {A},
    as it caused problems with writing {} in math mode.

2019.02.20
  - Accept single backticks to indicate inline code spans
  - Added possibility to mark function arguments via curly braces, as {A}

2018.09.20
  - Scan bracket `\[\]` declarations correctly (PR #162)
  - Removed the hardcoded utf8 option, make it overrideable via gapdoc_latex_option
  - Allow AutoDoc() to take absolute dirs and run from any dir (thanks to Glen Whitney)
  - Add a test suite for AutoDoc (thanks to Glen Whitney)
  - Fix documenting DeclareInfoClass

2018.02.14
  - Added @*Title commands to specify titles for Chapters etc.
  - Document @BeginExampleSession instead of @ExampleSession
  - Document the aliases @Example, @ExampleSession, @Log, and @LogSession
  - Improve manual (thanks to Chris Wensley):
    - fix a few typos
    - added abstract and acknowledgments
    - added bibliography file AutoDoc.bib
    - added checklist subsection 1.3.3
    - added some index entries
    - change makedoc.g to highlight some useful features of the AutoDoc() function
  - Various other tweaks and fixes

2017.09.08
  - Add ChapterLabel, SectionLabel, and SubsectionLabel
  - Add ExampleSession environment to support GAPDoc-Style examples
  - Add support for documenting DeclareConstructor
  - Empty lines in AutoDoc comments start a new paragraph, as in TeX
  - Improve @Example documentation
  - Fix some spelling mistakes in the manual
  - Fix support for KeyDependendOperations (see issue #124)
  - Don't show a return value if no @Returns is given
  - Various other tweaks and fixes

2016.12.04:
  - Revise and officially document the `entities` option for AutoDoc()

2016.11.26:
  - Use english month names on title pages
  - Ignore empty dependency lists in PackageInfo.g files