@@ -419,3 +419,69 @@ InstallGlobalFunction( CreateMakeTest,
 
     CloseStream( filestream );
 end );
+
+# The following function is originally by Alexander Konovalov
+BindGlobal("AUTODOC_ExtractMyManualExamples",
+function( pkgname, pkgdir, docdir, main, files )
+    local tst, i, s, basename, name, output, ch, a, location, pos, comment, pkgdirString;
+    Print("Extracting manual examples for ", pkgname, " package ...\n" );
+    if not EndsWith(main, ".xml") then
+        main := Concatenation( main, ".xml" );
+    fi;
+    tst:=ExtractExamples( docdir, main, files, "Chapter" );
+    Print(Length(tst), " chapters detected\n");
+    pkgdirString := Filename(pkgdir, "");
+    AUTODOC_CreateDirIfMissing( Filename(pkgdir, "tst") );
+    for i in [ 1 .. Length(tst) ] do
+        Print( "Chapter ", i, " : \c" );
+        if Length( tst[i] ) = 0 then
+            Print("no examples \n" );
+            continue;
+        fi;
+        s := String(i);
+        if Length(s)=1 then
+            # works for <100 chapters
+            s:=Concatenation("0",s);
+        fi;
+        basename := Concatenation( LowercaseString(pkgname), s, ".tst" );
+        basename := ReplacedString( basename, " ", "_" );
+        name := Filename(pkgdir, Concatenation("tst/", basename) );
+        output := OutputTextFile( name, false ); # to empty the file first
+        SetPrintFormattingStatus( output, false ); # to avoid line breaks
+        ch := tst[i];
+        AppendTo(output, "# ", pkgname, ", chapter ",i,"\n");
+        AppendTo(output,
+"""#
+# DO NOT EDIT THIS FILE - EDIT EXAMPLES IN THE SOURCE INSTEAD!
+#
+# This file has been generated by AutoDoc. It contains examples extracted from
+# the package documentation. Each example is preceded by a comment which gives
+# the name of a GAPDoc XML file and a line range from which the example were
+# taken. Note that the XML file in turn may have been generated by AutoDoc
+# from some other input.
+#
+""");
+        AppendTo(output, "gap> START_TEST( \"", basename, "\");\n");
+        for a in ch do
+            location := a[2][1];
+            if StartsWith(location, pkgdirString) then
+                comment := location{[ Length(pkgdirString)+1 .. Length(location) ]};
+            else
+                pos := PositionSublist(location, LowercaseString(pkgname));
+                if pos <> fail then
+                    comment := location{[ pos+Length(pkgname)+1 .. Length(location) ]};
+                else
+                    pos := PositionSublist(location,"./");
+                    if pos <> fail then
+                        comment := location{[ pos+2 .. Length(location) ]};
+                    else
+                        Error("oops");
+                    fi;
+                fi;
+            fi;
+            AppendTo(output, "\n# ", comment, ":", a[2][2], "-", a[2][3], a[1]);
+        od;
+        AppendTo(output, "gap> STOP_TEST(\"", basename, "\", 1 );\n");
+        Print("extracted ", Length(ch), " examples\n");
+    od;
+end);
