@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- This is an automatically generated file. -->
+<#Include SYSTEM "_Chapter_AutoDoc_worksheets.xml">
+<#Include SYSTEM "_Chapter_AutoDoc.xml">
